methods.flowerpot.FlowerPot.scala.error
Erreur de compilation :
FlowerPot:10: error: ';' expected but ',' found.
  droite(),avance(2);droite();avance(2)
          ^